syntax = "proto3";

package ai.bale.taskulu;

service Example {
    rpc RegisterExample (ExampleRequest) returns (ResponseVoid) {
    }
}

message ExampleRequest {
    int64 auth_id = 1;
    int64 user_id = 2;
}

message ResponseVoid {
}

